Closed Bug 1667007 Opened 4 years ago Closed 4 years ago

error: static assertion failed: MPSCQueue internal allocations too big.

Categories

(Core :: Audio/Video: cubeb, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox82 --- fixed
firefox83 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

This error appears when building on Linux mipsel.

/<<PKGBUILDDIR>>/dom/media/AsyncLogger.h:93:58: error: static assertion failed: MPSCQueue internal allocations too big.
   93 |   static_assert(sizeof(MPSCQueue<TracePayload>::Message) <= PAYLOAD_TOTAL_SIZE,
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~

The problem is that the PADDING calculation doesn't account for special cases of alignment on some platforms.

such that it accounts for alignment of TracePayload itself in MPSCQueue
correctly.

Depends on: 1645416
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/a7dec549998f
Fix AsyncLogger::TracePayload's mName size calculation. r=padenot

does this only affect v83 branch?

Comment on attachment 9177563 [details]
Bug 1667007 - Fix AsyncLogger::TracePayload's mName size calculation.

Beta/Release Uplift Approval Request

  • User impact if declined: Build failure on some tier-3 platforms
  • Is this code covered by automated tests?: Unknown
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The resulting code is stricter than the current code in what it expects the struct size to be (== rather than <=), so if the struct size doesn't actually end up with the expected size, the build will fail, which it doesn't as far as testing on tier-1 and some tier-3 platforms showed.
  • String changes made/needed:
Attachment #9177563 - Flags: approval-mozilla-beta?

I'm asking, since I'm loosly associated with packaging firefox for gentoo, but don't have own mips/mipsel hardware to test this with. So maybe I can help the few brave souls out there with picking up the patch for 78-esr

It doesn't affect esr78.

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Comment on attachment 9177563 [details]
Bug 1667007 - Fix AsyncLogger::TracePayload's mName size calculation.

approved for 82.0b4

Attachment #9177563 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: