Bug 1667007 - Fix AsyncLogger::TracePayload's mName size calculation. r=padenot, a=jcristau

such that it accounts for alignment of TracePayload itself in MPSCQueue
correctly.

Differential Revision: https://phabricator.services.mozilla.com/D91238